// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test format javascript 1`] = `
"export default defineComponent({
  setup() {
    const NOT_NULL_CONST = "NOT_NULL_CONST";
    const NOT_NULL_CONST2 = "NOT_NULL_CONST2";
    const SELECT_NOT_NULL_CONST = "SELECT_NOT_NULL_CONST";

    const a = 1;
    const foo = 2;
    const bar = 3;
    const baz = 4;
    return {
      a,
      foo,
      baz,
      bar,
      NOT_NULL_CONST,
      NOT_NULL_CONST2,
      SELECT_NOT_NULL_CONST,
    };
  },
});
"
`;

exports[`test format typescript 1`] = `
"export default defineComponent({
  setup() {
    const NOT_NULL_CONST = "NOT_NULL_CONST";
    const NOT_NULL_CONST2 = "NOT_NULL_CONST2";
    const SELECT_NOT_NULL_CONST = "SELECT_NOT_NULL_CONST";

    const a = 1;
    const foo = 2;
    const bar = 3;
    const baz = 4;
    return {
      a,
      foo,
      baz,
      bar,
      NOT_NULL_CONST,
      NOT_NULL_CONST2,
      SELECT_NOT_NULL_CONST,
    };
  },
});
"
`;

exports[`test format vue sfc 1`] = `
"<template>
  <div class="flex">
    <el-button type="primary"> submit </el-button>
  </div>
</template>

<script lang="ts">
import { defineComponent } from "vue";
export default defineComponent({
  setup() {
    const NOT_NULL_CONST = "NOT_NULL_CONST";
    const NOT_NULL_CONST2 = "NOT_NULL_CONST2";
    const SELECT_NOT_NULL_CONST = "SELECT_NOT_NULL_CONST";

    const a = 1;
    const foo = 2;
    const bar = 3;
    const baz = 4;
    return {
      a,
      foo,
      baz,
      bar,
      NOT_NULL_CONST,
      NOT_NULL_CONST2,
      SELECT_NOT_NULL_CONST,
    };
  },
});
</script>

<style lang="scss" scoped>
.flex {
  display: flex;
}
</style>
"
`;

exports[`test format vue sfc-setup 1`] = `
"<template>
  <div class="flex">
    <el-button type="primary"> submit </el-button>
  </div>
</template>

<script lang="ts" setup>
const fn = () => {
  const NOT_NULL_CONST = "NOT_NULL_CONST";
  const NOT_NULL_CONST2 = "NOT_NULL_CONST2";
  const SELECT_NOT_NULL_CONST = "SELECT_NOT_NULL_CONST";

  const a = 1;
  const foo = 2;
  const bar = 3;
  const baz = 4;
  return {
    a,
    foo,
    baz,
    bar,
    NOT_NULL_CONST,
    NOT_NULL_CONST2,
    SELECT_NOT_NULL_CONST,
  };
};
</script>

<style lang="scss" scoped>
.flex {
  display: flex;
}
</style>
"
`;
